--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,11 @@ dev_dependencies:
     
   flutter_launcher_icons: "^0.9.2"
 
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "asset/images/svn_logo_ok.png"
+
   flutter_lints: ^2.0.0
 
 # For information on the generic Dart part of this file, see the
