--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,12 +39,13 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
     
-  flutter_launcher_icons: "^0.9.2"
+  flutter_launcher_icons: "^0.7.3"
 
 flutter_icons:
+  image_path_android: "assets/images/svn_logo_ok.png"
+  image_path_ios: "assets/images/svn_logo_ok.png"
   android: true
   ios: true
-  image_path: "asset/images/svn_logo_ok.png"
 
 flutter_lints: ^2.0.0
 
