--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,8 +42,8 @@ dev_dependencies:
   flutter_launcher_icons: "^0.7.3"
 
 flutter_icons:
-  image_path_android: "assets/images/svn_logo_ok.png"
-  image_path_ios: "assets/images/svn_logo_ok.png"
+  image_path_android: "assets/images/new_logo.png"
+  image_path_ios: "assets/images/new_logo.png"
   android: true
   ios: true
 
