--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,7 +31,9 @@ dependencies:
     sdk: flutter
 
   font_awesome_flutter: ^10.1.0
-
+  
+  flutter_native_splash: ^2.2.3
+  
   carousel_slider: ^4.1.1
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -41,13 +43,23 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
     
-  flutter_launcher_icons: "^0.7.3"
+  flutter_launcher_icons: "^0.9.2"
 
 flutter_icons:
   image_path_android: "assets/images/new_logo.png"
   image_path_ios: "assets/images/new_logo.png"
   android: true
   ios: true
+
+flutter_native_splash:
+  color: "#ffffff"
+  image: assets/images/new_logo_svn01.png
+  branding: assets/images/new_logo_svn01.png
+  color_dark: "#ffffff"
+  image_dark: assets/images/new_logo_svn01.png
+  branding_dark: assets/images/new_logo_svn01.png
+  
+
 
 flutter_lints: ^2.0.0
 
