--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,10 +52,10 @@ flutter_icons:
   ios: true
 
 flutter_native_splash:
-  color: "#f6781e"
+  color: "#eadb10"
   image: assets/images/new_logo_svn01.png
   branding: assets/images/new_logo_svn01.png
-  color_dark: "#f6781e"
+  color_dark: "#eadb10"
   image_dark: assets/images/new_logo_svn01.png
   branding_dark: assets/images/new_logo_svn01.png
   
