--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,7 +31,7 @@ dependencies:
     sdk: flutter
 
   font_awesome_flutter: ^10.1.0
-  
+  easy_search_bar: ^2.3.1
   flutter_native_splash: ^2.2.3
   
   carousel_slider: ^4.1.1
