--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -76,7 +76,9 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/
+    - assets/images/new_logo.png
+    - assets/images/bg01.jpg
+    - assets/images/background.webp
     # - assets/icons/
     # - assets/fonts/
 
