--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,7 +33,7 @@ dependencies:
   font_awesome_flutter: ^10.1.0
   easy_search_bar: ^2.3.1
   flutter_native_splash: ^2.2.3
-  
+  mongo_dart: ^0.7.4+1
   carousel_slider: ^4.1.1
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
