--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   flutter_native_splash: ^2.2.3
   mongo_dart: ^0.7.4+1
   carousel_slider: ^4.1.1
+  http: ^0.13.4
  
   cupertino_icons: ^1.0.2
 
