--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,11 @@ dependencies:
  
   cupertino_icons: ^1.0.2
   lottie: ^1.4.2
+  external_app_launcher: ^3.1.0
+
+  firebase_core: ^1.22.0
+  firebase_auth: ^3.9.0
+  cloud_firestore: ^3.4.8
 
 dev_dependencies:
   flutter_test:
