--- a/android/build.gradle
+++ b/android/build.gradle
@@ -8,6 +8,7 @@ buildscript {
     dependencies {
         classpath 'com.android.tools.build:gradle:7.1.2'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath 'com.google.gms:google-services:4.3.13'
     }
 }
 
@@ -29,3 +30,30 @@ subprojects {
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
+
+// buildscript {
+//   repositories {
+//     // Make sure that you have the following two repositories
+//     google()  // Google's Maven repository
+
+//     mavenCentral()  // Maven Central repository
+
+//   }
+//   dependencies {
+//      classpath 'com.android.tools.build:gradle:7.1.2'
+//      classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+//      classpath 'com.google.gms:google-services:4.3.13'
+
+//   }
+// }
+
+// allprojects {
+//   ...
+//   repositories {
+//     // Make sure that you have the following two repositories
+//     google()  // Google's Maven repository
+
+//     mavenCentral()  // Maven Central repository
+
+//   }
+// }
