--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   firebase_core: ^1.22.0
   firebase_auth: ^3.9.0
   cloud_firestore: ^3.4.8
+  flutter_easyloading: ^3.0.5
 
 dev_dependencies:
   flutter_test:
