--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.my_app_dev">
    <application
+        android:requestLegacyExternalStorage="true"
         android:label="Souvanny"
         android:name="${applicationName}"
         android:usesCleartextTraffic="true"
