--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   firebase_auth: ^3.9.0
   cloud_firestore: ^3.4.8
   flutter_easyloading: ^3.0.5
+  image_picker: ^0.8.5+3
 
 dev_dependencies:
   flutter_test:
